# HS-Verteilte-Systeme

./: README.md
VS01/src/: MessageValues.java
VS01_UDP_FILETRANSFER_SERVER/src/: MessageSender.java  UDPServer.java
VS02_TCP_HTTP_SERVER/: README.md  main.c
VS02_TCP_HTTP_SERVER/docroot/: form.html
VS04_RPC/: CMakeLists.txt
VS04_RPC/client/: client.c  receiver.c
VS04_RPC/server/: dispatcher.c
VS05_RPC_mit_Authentifizierung/: CMakeLists.txt
VS05_RPC_mit_Authentifizierung/client/: client.c  receiver.c
VS05_RPC_mit_Authentifizierung/client/RPC_Protocol_files/: pub_sub.h  pub_sub.x  pub_sub_clnt.c  pub_sub_deliv.x  return_codes.h
VS05_RPC_mit_Authentifizierung/server/: DEADJOE  dispatcher.c  hashes.txt  session_list.c  session_list.h
VS05_RPC_mit_Authentifizierung/server/RPC_Protocol_files/: pub_sub.h  pub_sub.x  pub_sub_svc.c  return_codes.h
VS05_RPC_mit_Authentifizierung/server/hashing/: sha_hashing
VS07_Java_RMI_Web_Client/src/: ClientServlet.java
VS08_Java_Ajax/VS08_Java_Ajax/src/: BillBoard.java  BillBoardAdapterIf.java  BillBoardHtmlAdapter.java  BillBoardJSONAdapter.java  BillBoardServlet.java
VS08_Java_Ajax/VS08_Java_Ajax/web/: billboard.js  index.jsp
VS09_Websockets/BillboardWebsockets_source/: pom.xml
VS09_Websockets/BillboardWebsockets_source/src/main/java/: BillBoardEntry.java  BillBoardHtmlAdapter.java  BillBoardServlet.java  BillboardWebsocket.java
VS09_Websockets/BillboardWebsockets_source/src/main/webapp/: billboard.js  billboard_old.js
src/: MessageReceiver.java  MessageSender.java  UDPClient.java
(+13 files in other folders)
